<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.dineshbalajivenkataraman.garimaartshop.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="317dp"
        android:layout_weight="0.33"
        android:orientation="horizontal"
        tools:ignore="InefficientWeight">

        <ImageView
            android:id="@+id/first_image"
            android:layout_width="215dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="false"
            android:cropToPadding="true"
            app:srcCompat="@drawable/garima"
            android:contentDescription=""
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.21"
                android:fontFamily="sans-serif"
                android:text="@string/comp_name"
                android:textAlignment="center"
                android:textColorLink="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.54"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/comp_desc"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="199dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/web_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:fontFamily="lobster_regular"
                android:text="@string/web_site"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.14"
                android:text="@string/phone_number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hour_of_operation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.16"
                android:text="@string/hour_of_operation"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:text="@string/direction"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="238dp"
            android:layout_height="327dp"
            android:layout_marginLeft="20dp"
            android:adjustViewBounds="true"
            android:paddingBottom="20dp"
            android:scaleType="fitXY"
            android:scaleY="1.2"
            app:srcCompat="@drawable/garima2"
            tools:ignore="ContentDescription,RtlHardcoded" />
    </LinearLayout>
</LinearLayout>
